# CRUD

./: pyproject.toml
app/: main.py
app/config/: config.py
app/controller/: movies.py
app/errors/: errors.py
app/model/: bancodedados.db  database.db  database.py  serializer.py  tables.py
app/resource/: movies.py
app/schema/: schema.py
